--- a/env.yaml
+++ b/env.yaml
@@ -74,4 +74,4 @@ dependencies:
     - vtk>=9.2.2
     - git+https://github.com/dgasmith/opt_einsum.git@1a984b7b75f3e532e7129f6aa13f7ddc3da66e10
     - git+https://github.com/microsoft/cliffordlayers.git@74799cf4588a065916305bfcf2f030d84918f0ad
-    - git+https://github.com/AMLab-Amsterdam/lie_learn.git
+    - lie_learn
