Tested values sofar

--- a/env.yaml
+++ b/env.yaml
@@ -3,7 +3,7 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python>=3.8
+  - python==3.11
   - pip:
     - black~=22.8.0
     - isort~=5.13.2
@@ -11,7 +11,7 @@ dependencies:
     - pydocstyle
     - pylint~=2.15.0
     - pytest-cov==3.0.0
-    - pytest==7.0.1
+    - pytest=7.0.1
     - xenon==0.9.0
     - types-tqdm
     - click==8.0.4
@@ -30,20 +30,19 @@ dependencies:
     - tqdm
     - einops
     - torch-ema
-    - torch==2.2.1
-    - torchvision
+
     - pyg_lib
-    - torch_scatter
+    - torch_scatterœ
     - torch_sparse
     - torch_cluster
     - torch_spline_conv
     - hydra-core
-    - mlflow==2.4.1
+    - mlflow
     - optuna
-    - SQLAlchemy==1.4.46
+    - SQLAlchemy
     - wandb
-    - clifford==1.4.0
-    - xformers==0.0.25
+    - clifford
+    - xformers
     - e3nn>=0.4.1
     - torch_geometric>=2.0.9
     - absl-py
@@ -72,6 +71,5 @@ dependencies:
     - prettytable
     - trimesh>=3.15.3
     - vtk>=9.2.2
-    - git+https://github.com/dgasmith/opt_einsum.git@1a984b7b75f3e532e7129f6aa13f7ddc3da66e10
-    - git+https://github.com/microsoft/cliffordlayers.git@74799cf4588a065916305bfcf2f030d84918f0ad
+    - cliffordlayers
     - lie_learn
