--- a/src/lib/env.yaml
+++ b/src/lib/env.yaml
@@ -11,7 +11,7 @@ dependencies:
     - pydocstyle
     - pylint~=2.15.0
     - pytest-cov==3.0.0
-    - pytest=7.0.1
+    - pytest==7.0.1
     - xenon==0.9.0
     - types-tqdm
     - click==8.0.4
@@ -29,27 +29,19 @@ dependencies:
     - rich
     - tqdm
     - einops
-    - torch-ema
-    - pyg_lib
-    - torch_scatterœ
-    - torch_sparse
-    - torch_cluster
-    - torch_spline_conv
+    - torch
     - hydra-core
     - mlflow
     - optuna
     - SQLAlchemy
     - wandb
     - clifford
-    - xformers
     - e3nn>=0.4.1
     - torch_geometric>=2.0.9
     - absl-py
     - certifi
     - chardet
     - cycler
-    - Cython
-    - dgl-cu110
     - grpcio
     - idna
     - joblib
@@ -71,4 +63,3 @@ dependencies:
     - trimesh>=3.15.3
     - vtk>=9.2.2
     - cliffordlayers
-    - lie_learn
